Finished non-bundles serial_logger, and fixed gps record test to be more robust.

--- a/tool/serial_logger/README.html
+++ b/tool/serial_logger/README.html
@@ -338,6 +338,12 @@ button::-moz-focus-inner {
 -h, --help          show this help message and exit
 </code></pre>
 
+<h2>Compatibility</h2>
+
+<p>This module was written for Python 2.7.3, and has been tested on Windows 7 (64 and 32 bit), and Mac OS X ??.</p>
+
+<p>TODO: Add python 3.3 support.</p>
+
 <h2>Author</h2>
 
 <p>&copy; 2012-2013 David Goodman</p>
